--- a/doctor/doctorfrontend/package.json
+++ b/doctor/doctorfrontend/package.json
@@ -12,6 +12,8 @@
     "bootstrap-icons": "^1.11.1",
     "cogo-toast": "^4.2.3",
     "date-fns": "^3.4.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "lottie-react": "^2.4.0",
     "moment": "^2.30.1",
     "num-words": "^1.2.3",
