--- a/doctor/doctorserver/package.json
+++ b/doctor/doctorserver/package.json
@@ -29,6 +29,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.0.3",
+    "twilio": "^5.2.2",
     "winston": "^3.13.0"
   }
 }
