--- a/doctor/doctorserver/package.json
+++ b/doctor/doctorserver/package.json
@@ -20,6 +20,7 @@
     "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.45",
     "multer": "^1.4.5-lts.1",
