--- a/receptionist/frontend/package.json
+++ b/receptionist/frontend/package.json
@@ -11,6 +11,8 @@
     "axios": "^1.6.7",
     "bootstrap-icons": "^1.11.1",
     "cogo-toast": "^4.2.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "num-to-words": "^0.2.1",
