--- a/receptionist/server/package.json
+++ b/receptionist/server/package.json
@@ -20,10 +20,12 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.45",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.0.3",
+    "twilio": "^5.2.2",
     "winston": "^3.13.0"
   }
 }
