--- a/superadmin/superadminserver/package.json
+++ b/superadmin/superadminserver/package.json
@@ -27,6 +27,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.9",
     "nodemon": "^3.0.3",
+    "twilio": "^5.2.2",
     "winston": "^3.13.0"
   }
 }
