--- a/superadmin/superadminserver/package.json
+++ b/superadmin/superadminserver/package.json
@@ -24,6 +24,7 @@
     "moment-timezone": "^0.5.45",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "mysqldump": "^3.2.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.9",
     "nodemon": "^3.0.3",
