--- a/receptionist/frontend/package.json
+++ b/receptionist/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.7",
     "bootstrap-icons": "^1.11.1",
     "cogo-toast": "^4.2.3",
+    "dom-to-image": "^2.6.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "moment": "^2.30.1",
