--- a/admin/frontend/package.json
+++ b/admin/frontend/package.json
@@ -11,7 +11,10 @@
     "axios": "^1.6.7",
     "bootstrap-icons": "^1.11.1",
     "cogo-toast": "^4.2.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "moment": "^2.30.1",
+    "num-words": "^1.2.3",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.1",
