--- a/admin/server/package.json
+++ b/admin/server/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "archiver": "^7.0.1",
     "bcrypt": "^5.1.1",
-  "bcryptjs": "^2.4.3",
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
@@ -22,8 +24,7 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.12",
     "nodemon": "^3.0.3",
-    "winston": "^3.13.0",
-"date-fns-tz": "^3.1.3",
-"archiver": "^7.0.1"
+    "twilio": "^5.2.2",
+    "winston": "^3.13.0"
   }
 }
